--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,17 @@
 </head>
 <body>
 
-<%= yield %>
+ <div id="main-container" class="container">
+      <div class="row">
+        <div class="col-xs-3">
+          <h3>Todo List!</h3>
+        </div>
+        <div class="col-xs-9">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
 
+</div>
 </body>
 </html>
