--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,28 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<<<<<<< HEAD
  <div id="main-container" class="container">
       <div class="row">
         <div class="col-xs-3">
-          <h3>Your Personal To-Do List</h3>
-=======
-
- <div id="main-container" class="container">
-      <div class="row">
-        <div class="col-xs-3">
-          <h3>Todo List!</h3>
->>>>>>> Users
+          <h3> Your To-Dos! </h3>
         </div>
         <div class="col-xs-9">
           <%= yield %>
         </div>
       </div>
     </div>
-<<<<<<< HEAD
-=======
 
-</div>
->>>>>>> Users
 </body>
 </html>
